crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__assignment__associativity.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/associativity.lox
---
success: true
exit_code: 0
----- stdout -----
c
c
c

----- stderr -----
