crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__assignment__global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/global.lox
---
success: true
exit_code: 0
----- stdout -----
before
after
arg
arg

----- stderr -----
