crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__assignment__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/syntax.lox
---
success: true
exit_code: 0
----- stdout -----
var
var

----- stderr -----
