crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__assignment__to_this.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/to_this.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: invalid assignment target: `this`
   ╭─[craftinginterpreters/test/assignment/to_this.lox:3:10]
   │
 3 │     this = "value"; // Error at '=': Invalid assignment target.
   │     ──┬─ ─  
   │       ╰───── only names can be assigned to, not this expressions
───╯
